<resources>

    <string name="app_name">Alchemist list</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Alchemist list</string>
    <string name="title_activity_experiment">Experiment</string>
    <string name="title_activity_ingredient_chooser">Choose ingredient</string>
    <string name="title_activity_effect_chooser">Choose effect</string>
    <string name="title_activity_db_chooser">Choose database</string>
    <string name="title_activity_manage_ingredient">Manage ingredient</string>
    <string name="title_activity_manage_effect">Manage effect</string>
    <string name="clear">clear</string>
    <string name="addAssoc">Add experiment</string>
    <string name="delAssoc">Delete experiment</string>
    <string name="delString">Delete string</string>
    <string name="menu_backup">Create backup</string>
    <string name="menu_restore">Restore backup</string>
    <string name="change_title">Change string</string>
    <string name="change_value">Change the value of the string to</string>
    <string name="selectDB">Select database</string>
    <string name="deleteDB">Delete database</string>
    <string name="export_title">Export database</string>
    <string name="export_value">File name of the database dump</string>
    <string name="import_title">Import database</string>
    <string name="import_value">File name of the database dump</string>
    <string name="add">Add</string>
    <string name="currentDatabase">Current database: </string>
    <string name="manage">Manage</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="deleteIngredient">Delete</string>
    <string name="addEffect">Add effect</string>
    <string name="manageIngredients">Manage ingredients</string>
    <string name="manageEffects">Manage effects</string>
    <string name="remove">Remove</string>
    <string name="effectsHeader">Effects:</string>
    <string name="ingredientsHeader">Ingredients:</string>
    <string name="rename">Rename</string>
    <string name="excluded">Excluded</string>
    <string name="experimented">Experimented</string>
    <string name="deleteDatabaseQuestion">Really delete database?</string>
    <string name="deleteIngredientQuestion">Really delete ingredient?</string>
    <string name="deleteEffectQuestion">Really delete effect?</string>
    <string name="renameIngredientTitle">Rename ingredient</string>
    <string name="renameIngredientQuestion">Choose new name for the ingredient</string>
    <string name="renameEffectTitle">Rename effect</string>
    <string name="renameEffectQuestion">Choose new name for the effect</string>
    

</resources>