<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp" >

        <Button
            android:id="@+id/ingredient_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="144dp"
            android:layout_marginLeft="86dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/ingredient_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:layout_marginLeft="38dp"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

    </LinearLayout>

    <Button
        android:id="@+id/ingredient_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ingredient_name"
        android:text="@string/deleteIngredient" />

</RelativeLayout>
