<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/manage_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/name" />

    <LinearLayout
        android:id="@+id/manage_buttonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/manage_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />
        
        <Button
            android:id="@+id/manage_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/effect_ingredientsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/manage_name"
        android:text="@string/ingredientsHeader"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ListView
        android:id="@+id/manage_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/manage_buttonRow"
        android:layout_below="@id/effect_ingredientsHeader" >

    </ListView>

</RelativeLayout>
